--- a/VasuthalozatParent/VasuthalozatAdminApplication/App.xaml
+++ b/VasuthalozatParent/VasuthalozatAdminApplication/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="Nincsilyen_Allam_Vasutak.App"
+﻿<Application x:Class="VasuthalozatAdminApplication.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Nincsilyen_Allam_Vasutak"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:VasuthalozatAdminApplication"
+             StartupUri="Views/AdminLogin.xaml">
     <Application.Resources>
          
     </Application.Resources>
