--- a/VasuthalozatParent/VasuthalozatAdminApplication/Views/AdminLogin.xaml
+++ b/VasuthalozatParent/VasuthalozatAdminApplication/Views/AdminLogin.xaml
@@ -1,14 +1,14 @@
-﻿<Window x:Class="Nincsilyen_Allam_Vasutak.Views.SignUp"
+﻿<Window x:Class="VasuthalozatAdminApplication.Views.AdminLogin"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Nincsilyen_Allam_Vasutak.Views"
+        xmlns:local="clr-namespace:VasuthalozatAdminApplication.Views"
         mc:Ignorable="d"
-        Title="SignUp" Height="250" Width="320">
+        Title="LogIn" Height="180" Width="320">
     <StackPanel>
         <StackPanel Height="auto" Margin="5" Background="Gray">
-            <Label Content="Regisztráció" HorizontalAlignment="Center" FontWeight="Bold" FontSize="20"/>
+            <Label Content="Admin belépés" HorizontalAlignment="Center" FontWeight="Bold" FontSize="20"/>
             <StackPanel>
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -16,8 +16,8 @@
                         <ColumnDefinition Width="10" />
                         <ColumnDefinition Width="1*" />
                     </Grid.ColumnDefinitions>
-                    <Label Grid.Column="0" Content="Felhasználónév:" Margin="2"/>
-                    <TextBox Grid.Column="2" Margin="2" Name="tb_username"/>
+                    <Label Grid.Column="0" Content="Név:" Margin="2"/>
+                    <TextBox Grid.Column="2" Margin="2" Name="tb_adminname"/>
                 </Grid>
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -28,17 +28,8 @@
                     <Label Grid.Column="0" Content="Jelszó:" Margin="2"/>
                     <TextBox Grid.Column="2" Margin="2" Name="tb_password"/>
                 </Grid>
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="1*" />
-                        <ColumnDefinition Width="10" />
-                        <ColumnDefinition Width="1*" />
-                    </Grid.ColumnDefinitions>
-                    <Label Grid.Column="0" Content="Jelszó megerősítése:" Margin="2"/>
-                    <TextBox Grid.Column="2" Margin="2" Name="tb_password_conf"/>
-                </Grid>
             </StackPanel>
-            <Button Click="btn_signup_Click" Content="Regisztráljunk!" Name="btn_signup" Margin="5, 10, 5, 5" Background="DimGray"/>
+            <Button Click="btn_adminlogin_Click" Content="Belépés!" Name="btn_adminlogin" Margin="5, 10, 5, 5" Background="DimGray"/>
         </StackPanel>
     </StackPanel>
 </Window>
