--- a/VasuthalozatParent/VasuthalozatPublicApplication/Views/SignUp.xaml
+++ b/VasuthalozatParent/VasuthalozatPublicApplication/Views/SignUp.xaml
@@ -40,5 +40,6 @@
             </StackPanel>
             <Button Click="btn_signup_Click" Content="Regisztráljunk!" Name="btn_signup" Margin="5, 10, 5, 5" Background="DimGray"/>
         </StackPanel>
+        <Button Click="btn_login_Click" Content="Van már fiókod? Bejelentkezés!" Name="btn_login" Margin="5,0" FontSize="10" Width="auto" HorizontalAlignment="Left"/>
     </StackPanel>
 </Window>
