--- a/VasuthalozatParent/VasuthalozatAdminApplication/Views/AdminInterface.xaml
+++ b/VasuthalozatParent/VasuthalozatAdminApplication/Views/AdminInterface.xaml
@@ -4,8 +4,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VasuthalozatAdminApplication.Views"
+        xmlns:model="clr-namespace:VasuthalozatAdminApplication.Models"
         mc:Ignorable="d"
         Title="AdminInterface" Height="480" Width="800">
+    <Window.DataContext>
+        <model:AdminInterfaceViewModel />
+    </Window.DataContext>
     <StackPanel>
         <Label Content="Admin felület" FontSize="30" FontWeight="Bold" HorizontalAlignment="Center" Name="label1"/>
         <Grid Margin="10">
@@ -45,7 +49,7 @@
                             <RowDefinition Height="1*" />
                         </Grid.RowDefinitions>
                         <Label Grid.Column="0" Grid.Row="0" Content="Város régi neve:" Margin="2"/>
-                        <TextBox Grid.Column="2" Grid.Row="0" Margin="2" Name="tb_varosreginev"/>
+                        <ComboBox Grid.Column="2" Grid.Row="0" Margin="2" Name="cb_varosreginev"/>
                         <Label Grid.Column="0" Grid.Row="2" Content="Város új neve:" Margin="2"/>
                         <TextBox Grid.Column="2" Grid.Row="2" Margin="2" Name="tb_varosujnev"/>
                     </Grid>
@@ -60,7 +64,7 @@
                             <ColumnDefinition Width="1*" />
                         </Grid.ColumnDefinitions>
                         <Label Grid.Column="0" Content="Város neve:" Margin="2"/>
-                        <TextBox Grid.Column="2" Margin="2" Name="tb_varostorles"/>
+                        <ComboBox Grid.Column="2" Margin="2" Name="cb_varostorles"/>
                     </Grid>
                     <Button Click="btn_varostorles_Click" Content="Töröl" Name="btn_varostorles" Background="DimGray"/>
                 </StackPanel>
@@ -83,9 +87,9 @@
                             <RowDefinition Height="1*" />
                         </Grid.RowDefinitions>
                         <Label Grid.Column="0" Grid.Row="0" Content="Honnan?" Margin="2"/>
-                        <TextBox Grid.Column="2" Grid.Row="0" Margin="2" Name="tb_ujjaratfrom"/>
+                        <ComboBox Grid.Column="2" Grid.Row="0" Margin="2" Name="cb_ujjaratfrom"/>
                         <Label Grid.Column="0" Grid.Row="2" Content="Hova?" Margin="2"/>
-                        <TextBox Grid.Column="2" Grid.Row="2" Margin="2" Name="tb_ujjaratto"/>
+                        <ComboBox Grid.Column="2" Grid.Row="2" Margin="2" Name="cb_ujjaratto"/>
                         <Label Grid.Column="0" Grid.Row="4" Content="Km?" Margin="2"/>
                         <TextBox Grid.Column="2" Grid.Row="4" Margin="2" Name="tb_ujjaratkm"/>
                     </Grid>
@@ -104,10 +108,10 @@
                             <RowDefinition Height="5" />
                             <RowDefinition Height="1*" />
                         </Grid.RowDefinitions>
-                        <Label Grid.Column="0" Content="Város neve:" Margin="2"/>
-                        <TextBox Grid.Column="2" Margin="2" Name="tb_jarattorlesfrom"/>
-                        <Label Grid.Column="0" Content="Város neve:" Margin="2"/>
-                        <TextBox Grid.Column="2" Margin="2" Name="tb_jarattorlesto"/>
+                        <Label Grid.Column="0" Grid.Row="0" Content="Honnan?" Margin="2"/>
+                        <ComboBox Grid.Column="2" Grid.Row="0" Margin="2" Name="cb_jarattorlesfrom"/>
+                        <Label Grid.Column="0" Grid.Row="2" Content="Hova?" Margin="2"/>
+                        <ComboBox Grid.Column="2" Grid.Row="2" Margin="2" Name="cb_jarattorlesto"/>
                     </Grid>
                     <Button Click="btn_jarattorles_Click" Content="Töröl" Name="btn_jarattorles" Background="DimGray"/>
                 </StackPanel>
@@ -116,15 +120,17 @@
             <Grid Grid.Column="2">
                 <DataGrid Visibility="Hidden" AutoGenerateColumns="False" CanUserAddRows="False" Name="dataGridVarosok" MaxHeight="330"  VerticalScrollBarVisibility="Auto">
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Városok" Binding="{Binding Varosok}" Width="*"/>
+                        <DataGridTextColumn Header="ID" Binding="{Binding ID}" Width="30"/>
+                        <DataGridTextColumn Header="Városok" Binding="{Binding Name}" Width="*"/>
                     </DataGrid.Columns>
                 </DataGrid>
             </Grid>
             <Grid Grid.Column="2">
                 <DataGrid Visibility="Hidden" AutoGenerateColumns="False" CanUserAddRows="False" Name="dataGridJaratok" MaxHeight="330"  VerticalScrollBarVisibility="Auto">
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Honnan" Binding="{Binding From}" Width="*"/>
-                        <DataGridTextColumn Header="Hova" Binding="{Binding To}" Width="*"/>
+                        <DataGridTextColumn Header="Honnan" Binding="{Binding ID}" Width="*"/>
+                        <DataGridTextColumn Header="Honnan" Binding="{Binding From.Name}" Width="*"/>
+                        <DataGridTextColumn Header="Hova" Binding="{Binding To.Name}" Width="*"/>
                         <DataGridTextColumn Header="Km" Binding="{Binding Km}" Width="*"/>
                     </DataGrid.Columns>
                 </DataGrid>
