--- a/VasuthalozatParent/VasuthalozatAdminApplication/Views/AdminLogin.xaml
+++ b/VasuthalozatParent/VasuthalozatAdminApplication/Views/AdminLogin.xaml
@@ -26,7 +26,7 @@
                         <ColumnDefinition Width="1*" />
                     </Grid.ColumnDefinitions>
                     <Label Grid.Column="0" Content="Jelszó:" Margin="2"/>
-                    <TextBox Grid.Column="2" Margin="2" Name="tb_password"/>
+                    <PasswordBox Grid.Column="2" Margin="2" Name="pb_password"/>
                 </Grid>
             </StackPanel>
             <Button Click="btn_adminlogin_Click" Content="Belépés!" Name="btn_adminlogin" Margin="5, 10, 5, 5" Background="DimGray"/>
