--- a/VasuthalozatParent/VasuthalozatPublicApplication/Views/LogIn.xaml
+++ b/VasuthalozatParent/VasuthalozatPublicApplication/Views/LogIn.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VasuthalozatPublicApplication.Views"
         mc:Ignorable="d"
-        Title="LogIn" Height="180" Width="320">
+        Title="LogIn" Height="200" Width="320">
     <StackPanel>
         <StackPanel Height="auto" Margin="5" Background="Gray">
             <Label Content="Belépés" HorizontalAlignment="Center" FontWeight="Bold" FontSize="20"/>
@@ -26,7 +26,7 @@
                         <ColumnDefinition Width="1*" />
                     </Grid.ColumnDefinitions>
                     <Label Grid.Column="0" Content="Jelszó:" Margin="2"/>
-                    <TextBox Grid.Column="2" Margin="2" Name="tb_password"/>
+                    <PasswordBox Grid.Column="2" Margin="2" Name="pb_password"/>
                 </Grid>
             </StackPanel>
             <Button Click="btn_login_Click" Content="Belépés!" Name="btn_login" Margin="5, 10, 5, 5" Background="DimGray"/>
